# ndt_localization

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/pcl_localization/: pcl_localization_component.hpp
launch/: pcl_localization.launch.xml
msg/: LocalizationScore.msg
src/: pcl_localization_component.cpp  pcl_localization_node.cpp
